# vscode-extension-lsp-pfx

./: .gitignore  CHANGELOG.md  Quickstart.md  README.md  esbuild.js  package.json  pyproject.toml  tsconfig.json
server/: lsp_server.py
server/antlr4_parser/powerfx_alpha/: PowerFxAlphaLexer.py  PowerFxAlphaParser.py
server/common/: const.py  pyparse_alpha.py
syntaxes/: READEME.md  pyparse.py  pyparse_alpha.py
syntaxes/antlr4_parser/powerfx/: PowerFxLexer.g4  PowerFxLexer.interp  PowerFxLexer.py  PowerFxParser.g4  PowerFxParser.interp  PowerFxParser.py  PowerFxParser.tokens  PowerFxParserListener.py
syntaxes/antlr4_parser/powerfx_alpha/: PowerFxAlphaLexer.g4  PowerFxAlphaLexer.interp  PowerFxAlphaLexer.tokens  PowerFxAlphaParser.g4  PowerFxAlphaParser.interp  PowerFxAlphaParserListener.py
syntaxes/config/: language-configuration.json
syntaxes/expression-grammar/: expression-grammar.grammar
syntaxes/powerfx-script-sample/: test1-alpha.pfa  test2-alpha.pfa  test3-alpha.pfa
syntaxes/powerfx-script-sample/powerfx/: test1.pfx  test2.pfx  test3.pfx  test4.pfx
syntaxes/textmate-grammar/: PowerFxAlpha.tmLanguage.json
vscode-client/: extension.sample.ts
vscode-client/src/: config.template.json  extension.ts
